# Classifiez_automatiquement_des_informations

./: .gitignore  README.md  main.py  pyproject.toml
Data/Processed/: Projet_4_etape1_clean.csv  Projet_4_etape2_clean.csv  test_data_df.csv  train_data_df.csv
notebooks/: notebook_1_analyse_exploratoire.ipynb  notebook_2_feature_engineering.ipynb  notebook_3_modele_classification.ipynb  notebook_4_amelioration_classification.ipynb  notebook_5_optimisation_interpretation.ipynb  utils.py
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
